# recommend_practice

./: .gitignore  pyproject.toml  test.ipynb
practice/data/: __init__.py  genome_score.py  genome_scores.py  genome_tags.py  movies.py  ratings.py  tags.py  test.ipynb
practice/model/: preference_recommend.py  recommend.py  user_based_recommend.py
