[tool.poetry]
name = "recommend_practice"
version = "0.1.0"
description = ""
authors = ["Kuroflectr <ike.kuroflectr@gmail.com>"]
readme = "README.md"
packages = [{include = "practice"}]

[tool.poetry.dependencies]
python = "^3.9.5"
pydantic = "^1.10.2"
ipython = "^8.5.0"
ipykernel = "^6.16.2"
numpy = "^1.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
